--- a/index.html
+++ b/index.html
@@ -7,193 +7,119 @@
     <title>Portfolio Page</title>
   <style> 
   
-  body {
-            color: #ffffff;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            margin: 20px;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .navbar {
-            background-color: rgba(0, 0, 0, 0.3);
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .card {
-            background-color: rgba(255, 255, 255, 0.2);
-            margin: 10px 0;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            padding: 15px;
-        }
-
-        .rounded-circle {
-            border: 3px solid #ffffff;
-        }
-
-        form input, form textarea {
-            width: 100%;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            border: none;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        button {
-            background-color: #1e3c72;
-            color: #ffffff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        button:hover {
-            background-color: #2a5298;
-        }
-  
   </style>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     <script src="print.js"></script>
     <script src="data.js"></script>
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">My Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#hero">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#education">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Me</a>
-                    </li>
+        <!-- Achievements Section -->
+      
+   <div class="container my-5 text-black">
+    <!-- Header Section -->
+    <section id="hero" class="py-5 bg-primary text-white text-center">
+        <h1>IVAN FAJRIN</h1>
+        <img src="img/img.jpg" class="img-fluid rounded-circle mb-3 " alt="Profile image">
+        <p>
+            <a class="text-white" href="mailto:ivanfajrin123@gmail.com">ivanfajrin123@gmail.com</a><br>
+            <a class="text-white" href="https://www.linkedin.com/in/ivan-fajrin-61b060196/" target="_blank">LinkedIn</a> | 
+            <a class="text-white" href="https://ivanfajrin.github.io/proto/" target="_blank">Portfolio</a><br>
+            📍 Babakan, Cirebon, Jawa Barat
+        </p>
+    </section>
+
+    <!-- Profil Singkat -->
+    <section class="mb-5 bg-light">
+        <div class="container text-black">
+            <h2 class="mb-3">Profil Singkat</h2>
+            <p>Saya memiliki minat dalam perancangan pembelajaran yang menyenangkan, ekstrakurikuler pramuka, dan membaca literasi. Saya adalah pribadi yang suka menolong, memiliki rasa ingin belajar yang tinggi, serta mampu mengimplementasikan ilmu dan gagasan pembelajaran secara efektif.</p>
+        </div>
+    </section>
+
+    <!-- Pendidikan -->
+    <section class="mb-5 bg-light">
+        <div class="container text-black">
+            <h2 class="mb-3">Pendidikan</h2>
+
+            <h5>Universitas Islam Sultan Agung Semarang</h5>
+            <p><strong>Diploma in Elementary School Teacher Education</strong> | GPA: 3.75/4.00</p>
+            <p>Sep 2019 - Mar 2023</p>
+            <ul>
+                <li>Peserta KN MIPA 2021 di bidang Biologi tingkat Regional.</li>
+                <li>Mengembangkan aplikasi pembelajaran sains "Mari Belajar Peredaran Darah" (2023).</li>
+            </ul>
+
+            <h5>Universitas Muhammadiyah Cirebon</h5>
+            <p><strong>Pendidikan Profesi Guru (PPG) Prajabatan Gelombang 1 2023</strong></p>
+            <p>Sep 2023 - Aug 2024</p>
+        </div>
+    </section>
+
+    <!-- Pengalaman Kerja -->
+    <section class="mb-5 bg-light">
+        <div class="container text-black">
+            <h2 class="mb-3">Pengalaman Kerja</h2>
+            <div>
+                <h5>Student Teacher</h5>
+                <p><strong>SDN 1 Trusmi Kulon, Cirebon</strong> | Feb 2023 - Jun 2022</p>
+                <ul>
+                    <li>Mengelola perpustakaan: memperbaiki, mendata, dan mengatur peminjaman buku siswa.</li>
+                    <li>Menerapkan pembelajaran aktif untuk 30 siswa serta mendokumentasikan nilai siswa menggunakan Microsoft Word, Excel, dan PowerPoint.</li>
+                    <li>Membuat website sekolah menggunakan Blogspot untuk mempublikasikan kegiatan sekolah kepada masyarakat.</li>
                 </ul>
             </div>
         </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section id="hero" class="py-5 bg-primary text-white">
-        <div class="container text-center">
-            <img src="img/img.jpg" class="img-fluid rounded-circle mb-3" alt="Profile image">
-            <h1>Welcome to My Portfolio</h1>
-            <p class="lead">Discover my work and passion for web development</p>
-        </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-5">
-        <div class="container">
+    <!-- Keahlian Utama -->
+    <section class="mb-5 bg-light">
+        <div class="container text-black">
+            <h2 class="mb-3">Keahlian Utama</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <h2>About Me</h2>
-                    <p>Hello! I am a passionate web developer with expertise in creating responsive and dynamic websites using the latest technologies. I love solving problems and continuously learning to improve my skills.</p>
+                    <h5>Hard Skills</h5>
+                    <ul>
+                        <li>Komunikasi dan Kolaborasi</li>
+                        <li>Berpikir Analitis</li>
+                        <li>Pemecahan Masalah</li>
+                        <li>Kerja Tim</li>
+                        <li>Desain Web (HTML, CSS, JavaScript)</li>
+                        <li>Basis Data (MySQL)</li>
+                        <li>Microsoft Office (Word, PowerPoint, Excel)</li>
+                        <li>Canva</li>
+                    </ul>
                 </div>
-                <div class="col-md-6 text-center">
-                    <img src="https://via.placeholder.com/200" class="img-fluid rounded-circle" alt="Profile image">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Education Section -->
-    <section id="education" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-4">Education</h2>
-            <div class="row" id="education-container">
-                <!-- Education content will be populated by data.js -->
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Projects</h2>
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/350" class="card-img-top" alt="Project image">
-                        <div class="card-body">
-                            <h5 class="card-title">Project 1</h5>
-                            <p class="card-text">A brief description of the project.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/350" class="card-img-top" alt="Project image">
-                        <div class="card-body">
-                            <h5 class="card-title">Project 2</h5>
-                            <p class="card-text">A brief description of the project.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/350" class="card-img-top" alt="Project image">
-                        <div class="card-body">
-                            <h5 class="card-title">Project 3</h5>
-                            <p class="card-text">A brief description of the project.</p>
-                        </div>
-                    </div>
+                <div class="col-md-6">
+                    <h5>Minat</h5>
+                    <ul>
+                        <li>Pembelajaran Sains</li>
+                        <li>Pengembangan Media Pembelajaran</li>
+                        <li>Problem-Based Learning</li>
+                        <li>Teknologi Digital dalam Pendidikan</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Me Section -->
-    <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact Me</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Your name">
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Your email">
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="4" placeholder="Your message"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Send</button>
-            </form>
+    <!-- Proyek -->
+    <section class="mb-5 bg-light">
+        <div class="container text-black">
+            <h2 class="mb-3">Proyek</h2>
+            <ul>
+                <li>2024: Pengembangan Desa Kebun Piknik</li>
+            </ul>
+
+            <h2 class="mb-3">Pencapaian</h2>
+            <ul>
+                <li>2021: Peserta Kompetisi Nasional MIPA 2021</li>
+            </ul>
         </div>
     </section>
-   <script> 
+</div>
 
-</script>
     
     <script src="js/bootstrap.bundle.min.js"></script>
  
