--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- Achievements Section -->
       
-   <div class="container my-5 text-black">
+   <div class="d-flex justify-content-center align-items-center min-vh-100">
     <!-- Header Section -->
     <section id="hero" class="py-5 bg-primary text-white text-center">
         <h1>IVAN FAJRIN</h1>
