--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Achievements Section -->
       
    <div class="d-flex justify-content-center align-items-center min-vh-100 h-100">
-    <div>
+    <div class="row">
     <!-- Header Section -->
     <section id="hero" class="py-5 bg-primary text-white text-center">
         <h1>IVAN FAJRIN</h1>
